[#43] dileep/ashritha - Enabled expansion on other players button
What are the changes?

* Added generic close button.
* Added showOtherPlayers function.

Why do we need this change?

* To show the other players in game.

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -36,7 +36,7 @@
   padding: 0.5vmax;
 }
 
-.profile-wrapper>header {
+.expansion-window-screen header {
   display: flex;
   justify-content: space-between;
   padding: 0vmax 1vmax;
