[#56] dileep/ashritha - Changed stylings of sidebar
What are the changes?

* Added hover effect for sidebar and other players profile.
* Organized the functions in showMyProfile.

Why do we need this change?

* To organize the code

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -25,6 +25,7 @@
   --violet-p: #7145f7;
   --orange-p: #fc880c;
   --grey-p: rgb(210 210 210);
+  --hover-bg: lightgray;
 }
 
 * {
@@ -160,11 +161,6 @@ a {
   border: var(--def-border);
   z-index: 1;
   transition: 500ms ease;
-}
-
-.name {
-  aspect-ratio: 8;
-  width: 30%;
 }
 
 .row {
