[#70] govinda/vivek - Added spinner in waiting lobby
What are the changes?

* Added spinner in waiting lobby

Why do we need this change?

* To inform other players about waiting

--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -40,13 +40,17 @@
 .profile-color {
   width: 40%;
   aspect-ratio: 1;
-  background-color: azure;
+  background-color: whitesmoke;
   border-radius: 50%;
   margin-bottom: 0.4em;
   font-size: 1vmax;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.profile-color>img {
+  width: 70%;
 }
 
 .player-name {
