--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -490,36 +490,32 @@ a {
 #main-card {
   grid-row: 2/6;
   grid-column: 2/6;
-  margin: 1vmax;
+  margin: 0.5vmax 0vmax;
   border-radius: 0.5vmax;
   padding: 0.5em;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 #main-card .card-heading {
   font-size: 1.3vmax;
   font-weight: 500;
   width: 100%;
-  height: 20%;
   text-align: center;
 }
 
 #main-card .description {
   width: 100%;
-  height: 30%;
 }
 
 #main-card .rule {
   width: 100%;
-  height: 35%;
 }
 
 #main-card .cost {
   font-size: 1vmax;
   font-weight: 600;
-  padding: 1vmax;
   text-align: center;
 }
 
