[#69] govinda/vivek - Changed styling of message box and slowed the spinner
What are the changes?

* Changed styling of message box and slowed the spinner

Why do we need this change?

* To enhance user interface

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -546,8 +546,16 @@ a {
 /* Card design ends */
 
 #message-space {
+  display: flex;
   grid-row: 6;
   grid-column: 1/7;
+  font-weight: 600;
+  align-items: center;
+  justify-content: center;
+}
+
+#message-space>div {
+  font-size: 1.2vmax;
 }
 
 /* dice box positions  Start*/
