--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -166,6 +166,15 @@ a {
   aspect-ratio: 3;
   border: var(--def-border);
   align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#board-toggle:hover {
+  background-color: var(--hover-bg);
+  font-weight: 400;
 }
 
 .ratrace-tile {
