--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -795,6 +795,13 @@ a {
   border-bottom: var(--def-border);
 }
 
+.ledger-title div,
+.ledger-entry div {
+  text-align: center;
+  width: 25%;
+}
+
+
 .ledger-entries {
   height: 100%;
   overflow-y: scroll;
