--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,13 +1,10 @@
 :root {
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --bgColor: dimgrey;
   --def-border: 0.5px solid black;
-  --big-border: 0.2vmax solid black;
+  --big-border: 0.1vmax solid black;
   --def-curve: 0.5vmax;
   --page-header: 2.5vmax;
   --plain-font: 1.2vmax;
-  --primary: #2e152f;
-  --secondary-light: #f2e1c8;
   --deal-border: #40b34e;
   --deal-bg: #d7edda;
   --doodad-border: #ec2135;
@@ -24,8 +21,7 @@
   --pink-p: #ee3645;
   --violet-p: #7145f7;
   --orange-p: #fc880c;
-  --grey-p: rgb(210 210 210);
-  --hover-bg: lightgray;
+  --grey-p: lightgray;
 }
 
 * {
@@ -37,6 +33,7 @@
 
 body {
   font-family: var(--font-family);
+  image-rendering: optimizeSpeed;
   max-width: 100vw;
   max-height: 100vh;
 }
@@ -208,4 +205,13 @@ a {
   color: white;
   padding: 0.5vmax;
   cursor: pointer;
+}
+
+.flex-column{
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row{
+  display: flex;
 }
