--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -68,37 +68,23 @@
   font-size: 2.5vmax;
 }
 
-#player-1 {
-  grid-row: 1;
-  grid-column: 1;
+#player-1,#player-2,#player-3{
+  grid-row: 1;  
 }
-
-#player-2 {
-  grid-row: 1;
+#player-4,#player-5{
+  grid-row: 2;
+}
+#player-6{
+  grid-row: 3;  
+}
+#player-1,#player-4,#player-6{
+  grid-column: 1;  
+}
+#player-2,#player-5{
   grid-column: 2;
 }
-
-
-#player-3 {
-  grid-row: 1;
+#player-3{
   grid-column: 3;
-}
-
-
-#player-4 {
-  grid-row: 2;
-  grid-column: 1;
-}
-
-
-#player-5 {
-  grid-row: 2;
-  grid-column: 2;
-}
-
-#player-6 {
-  grid-row: 3;
-  grid-column: 1;
 }
 
 #lobby-header {
