--- a/views/register.html
+++ b/views/register.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div class="page-wrapper">
+  <div class="page-wrapper flex-row">
     <div id="main-image">
       <img src="images/cashflow-image-big.png" alt="Cashflow" title="Cashflow">
     </div>
