--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -3,14 +3,13 @@
   column-gap: 0.5em;
   height: 100vh;
   width: 100vw;
-  font-size: 1.8vmax;
+  font-size: var(--big-font);
 }
 
 .lobby {
   padding: 1em;
   width: 75%;
   height: 100%;
-  font-size: 1.6vmax;
 }
 
 .game-id {
@@ -43,7 +42,6 @@
   background-color: whitesmoke;
   border-radius: 50%;
   margin-bottom: 0.4em;
-  font-size: 1vmax;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,31 +57,33 @@
   text-align: center;
 }
 
-.profile-color i {
-  width: 100%;
-  aspect-ratio: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2.5vmax;
+#player-1,
+#player-2,
+#player-3 {
+  grid-row: 1;
 }
 
-#player-1,#player-2,#player-3{
-  grid-row: 1;  
-}
-#player-4,#player-5{
+#player-4,
+#player-5 {
   grid-row: 2;
 }
-#player-6{
-  grid-row: 3;  
+
+#player-6 {
+  grid-row: 3;
 }
-#player-1,#player-4,#player-6{
-  grid-column: 1;  
+
+#player-1,
+#player-4,
+#player-6 {
+  grid-column: 1;
 }
-#player-2,#player-5{
+
+#player-2,
+#player-5 {
   grid-column: 2;
 }
-#player-3{
+
+#player-3 {
   grid-column: 3;
 }
 
