[#34] dileep/abin - Showing succesfull messge on taking loan
What are the changes?

* Added successful message.
* Changed the classes for successfull and warning messges.
* Added validation for taking loan amount.
* Added submit on enter for take loan.

Why do we need this change?

* For convinience of player to take loan.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -621,12 +621,15 @@ a {
 
 .success {
   color: green;
+}
+
+.message {
   text-align: center;
+  font-size: 1vmax;
 }
 
 .warning {
   color: red;
-  text-align: center;
 }
 
 #expansion-window {
