--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -608,7 +608,6 @@ a {
   align-items: center;
   justify-items: center;
   margin: 0.5vmax 1vmax;
-  gap: 0.1vmax;
 }
 
 .start>img {
@@ -812,4 +811,23 @@ a {
   text-align: center;
   font-size: var(--small-font);
   outline: none;
+}
+
+#downsized-positions {
+  grid-row: 1;
+  grid-column: 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 0.5vmax 1vmax;
+}
+
+#downsized-positions>div {
+  border: var(--def-border);
+  border-radius: 50%;
+  width: 4vmax;
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
