[#41] dileep/abin - Added styles for pay and take loan
What are the changes?

* Restricting player to enter negative amount.
* Added hover effects for take and pay loan.

Why do we need this change?

* To restrict player from entering negative amount.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -161,7 +161,10 @@ a {
   cursor: pointer;
 }
 
-#board-toggle:hover {
+#board-toggle:hover,
+#pay-loan:hover,
+#take-loan:hover {
+  cursor: pointer;
   background-color: var(--grey-p);
   font-weight: 400;
 }
